--- a/index.html
+++ b/index.html
@@ -26,5 +26,68 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
         </header>
+
+        <!-- Основа страницы -->
+        <main>
+
+            <!-- Секция герой -->
+            <section>
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+            </section>
+
+            <!-- Чем мы занимаемся -->
+            <section>
+                <ul>
+                    <li>
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+                <h2>Чем мы занимаемся</h2>
+                <img src="./images/work.jpg" alt="Разметка страницы на ноутбуке">
+                <img src="./images/tel.jpg" alt="Просмотр макетов страниц для телефона">
+                <img src="./images/tablet.jpg" alt="Оформление страницы для планшета">
+            </section>
+
+            <!-- Наша команда -->
+            <section>
+                <h2>Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./images/ihor.jpg" alt="Русоволосый улыбающийся мужчина с бородой в очках и в коричневой рубашке.">
+                        <h3>Игорь Демьяненко</h3>
+                        <p lang="en">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/olga.jpg" alt="Блондинка в черном жакете, улыбаеться, в очках.">
+                        <h3>Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./images/nikola.jpg" alt="Мужчина с широкой улыбкой в голубой рубашке с легкой небритостью, русоволосый.">
+                        <h3>Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/michael.jpg" alt="Темноволосый мужчина с легкой улыбкой на лице, в очках и черной футболке.">
+                        <h3>Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
     </body>
     </html>
