Добавляет разметку подвала

--- a/index.html
+++ b/index.html
@@ -89,5 +89,19 @@
                 </ul>
             </section>
         </main>
+
+        <!-- Подвал -->
+        <footer>
+
+            <!-- Логотип -->
+            <a href=""> <span>Web</span>Studio</a>
+
+            <!-- Адресса -->
+            <address>
+                г. Киев, пр-т Леси Украинки, 26
+                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+            </address>
+        </footer>
     </body>
     </html>
