Добавляет размеры для фото

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     </li>
                 </ul>
                 <h2>Чем мы занимаемся</h2>
-                <img src="./images/work.jpg" alt="Разметка страницы на ноутбуке">
-                <img src="./images/tel.jpg" alt="Просмотр макетов страниц для телефона">
-                <img src="./images/tablet.jpg" alt="Оформление страницы для планшета">
+                <img src="./images/work.jpg" alt="Разметка страницы на ноутбуке" width="370">
+                <img src="./images/tel.jpg" alt="Просмотр макетов страниц для телефона" width="370">
+                <img src="./images/tablet.jpg" alt="Оформление страницы для планшета" width="370">
             </section>
 
             <!-- Наша команда -->
@@ -67,22 +67,22 @@
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/ihor.jpg" alt="Русоволосый улыбающийся мужчина с бородой в очках и в коричневой рубашке.">
+                        <img src="./images/ihor.jpg" alt="Русоволосый улыбающийся мужчина с бородой в очках и в коричневой рубашке." width="270">
                         <h3>Игорь Демьяненко</h3>
                         <p lang="en">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/olga.jpg" alt="Блондинка в черном жакете, улыбаеться, в очках.">
+                        <img src="./images/olga.jpg" alt="Блондинка в черном жакете, улыбаеться, в очках." width="270">
                         <h3>Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/nikola.jpg" alt="Мужчина с широкой улыбкой в голубой рубашке с легкой небритостью, русоволосый.">
+                        <img src="./images/nikola.jpg" alt="Мужчина с широкой улыбкой в голубой рубашке с легкой небритостью, русоволосый." width="270">
                         <h3>Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/michael.jpg" alt="Темноволосый мужчина с легкой улыбкой на лице, в очках и черной футболке.">
+                        <img src="./images/michael.jpg" alt="Темноволосый мужчина с легкой улыбкой на лице, в очках и черной футболке." width="270">
                         <h3>Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </li>
