--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- Контакты -->
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </header>
 
         <!-- Основа страницы -->
@@ -67,22 +67,22 @@
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/ihor.jpg" alt="Русоволосый улыбающийся мужчина с бородой в очках и в коричневой рубашке." width="270">
+                        <img src="./images/ihor.jpg" alt="Русоволосый улыбающийся мужчина." width="270">
                         <h3>Игорь Демьяненко</h3>
                         <p lang="en">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/olga.jpg" alt="Блондинка в черном жакете, улыбаеться, в очках." width="270">
+                        <img src="./images/olga.jpg" alt="Блондинка в очках." width="270">
                         <h3>Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/nikola.jpg" alt="Мужчина с широкой улыбкой в голубой рубашке с легкой небритостью, русоволосый." width="270">
+                        <img src="./images/nikola.jpg" alt="Мужчина в голубой рубашке." width="270">
                         <h3>Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/michael.jpg" alt="Темноволосый мужчина с легкой улыбкой на лице, в очках и черной футболке." width="270">
+                        <img src="./images/michael.jpg" alt="Темноволосый мужчина в черной футболке." width="270">
                         <h3>Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </li>
@@ -100,7 +100,7 @@
             <address>
                 г. Киев, пр-т Леси Украинки, 26
                 <a href="mailto:info@example.com">info@example.com</a>
-                <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
         </footer>
     </body>
